Try Catch add and some bug fixes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SW APP",
+  "name": "Star Wars APP",
   "icons": [
     {
       "src": "favicon.ico",
